Fixed sidebar scrollbar for Firefox.

--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -15,6 +15,7 @@
     overflow-x: scroll;
     color: white;
     border-right: 1px solid rgb(226, 226, 226);
+    scrollbar-width: none;
     p {
         text-transform: uppercase;
         color: $darkteal;
